z-index fixes for logo on mobile

--- a/app/styles/landingpage/intro.scss
+++ b/app/styles/landingpage/intro.scss
@@ -5,6 +5,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  position: relative;
 
   @include media-breakpoint-up(sm) {
     height: calc(100vh - 60px);
@@ -19,7 +20,7 @@
   z-index: 100;
   animation: 3s cubic-bezier(0.5, 0.1, 0.37, 1) scale-in-logo forwards;
   transform: scale(0.85, 0.85);
-  z-index: -1;
+  z-index: 0;
 
   @include media-breakpoint-up(sm) {
     fill: map-get($colors, white);
@@ -31,7 +32,7 @@
   position: absolute;
   overflow: hidden;
   width: 100vw;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 100px);
   top: 0;
   left: 0;
   z-index: -2;
